Bug 352420 - Wrong path location after detach tab when the path contain spaces [easy]
Summary: Wrong path location after detach tab when the path contain spaces [easy]
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: location (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 355074 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-08 04:00 UTC by Xavier Corredor Llano
Modified: 2015-11-09 11:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xavier Corredor Llano 2015-09-08 04:00:09 UTC
Dolphin has a wrong path location after detach tab when the path contain spaces in the name directory.

Reproducible: Always

Steps to Reproduce:
1. Open dolphin
2. Open a new tab
3. Create and enter a, for example, "/home/user/directory with space"
4. Right click on tab and click in "Detach"
5. The new detach dolphin show error said: the directory "/home/user/directory" not exist

Actual Results:  
dolphin enter in a wrong path: "/home/user/directory"

Expected Results:  
The new detach dolphin enter a correct path "/home/user/directory with space"

Dolphin version: 15.08.0
Comment 1 Emmanuel Pescosta 2015-09-08 19:29:38 UTC
Thanks for the bug report, I can reproduce the problem.
Comment 2 Emmanuel Pescosta 2015-10-21 11:46:24 UTC
Git commit 4d6cd761d8987adee511546f644ecf5f357148ad by Emmanuel Pescosta.
Committed on 21/10/2015 at 11:45.
Pushed by emmanuelp into branch 'Applications/15.08'.

Fix detach tab not working when path contains spaces.
FIXED-IN: 15.08.3
REVIEW: 125587

M  +6    -5    src/dolphintabwidget.cpp

http://commits.kde.org/dolphin/4d6cd761d8987adee511546f644ecf5f357148ad
Comment 3 Emmanuel Pescosta 2015-11-09 11:39:02 UTC
*** Bug 355074 has been marked as a duplicate of this bug. ***