Fix detach tab not working when path contains spaces.

BUG: 352420
FIXED-IN: 15.08.3
REVIEW: 125587